[metadata]
name = ArnoDB
version = 0.0.1
author = Matti Sarén
author_email = matti.saren@gmail.com
description = ArnoDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/msaren/arnodb
project_urls =
    Bug Tracker = https://github.com/nsaren/arnodb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
